[project]
name = "bnb-chain-chatbot"
version = "0.1.0"
description = "A modern web interface for the BNB Chain Example Hub's Python chatbot"
requires-python = ">=3.12"
dependencies = [
    "bnb-chain-agentkit>=0.1.1",
    "langchain-core>=0.3.43",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "langgraph-checkpoint>=2.0.18",
    "python-dotenv>=1.0.1",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.0",
    "openai>=0.27.0",
    "python-dotenv>=1.0.0",
    "web3>=6.0.0",
    "requests>=2.28.0",
]






