[project]
name = "dex-simulator"
version = "0.1.0"
description = "Educational DEX order book simulator for learning trading mechanics"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
