[project]
name = "nft-dynamic-metadata"
version = "0.1.0"
description = "Dynamic NFT metadata updater based on simulated oracle data"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "tinydb>=4.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
